--- a/css/checkout.css
+++ b/css/checkout.css
@@ -130,7 +130,7 @@ header h2 {
 }
 
 .address-box input:focus {
-    border-color: var(--second-color);
+    border-color:#f5ccc4;
 }
 
 .address-box button {
@@ -166,7 +166,7 @@ form input {
 }
 
 form input:focus {
-    border-color: var(--second-color);
+    border-color: #f5ccc4;
 }
 
 .payment-method {
